# remote-apis-sdks

./: .bazelrc  BUILD.bazel  MODULE.bazel  go.mod  go.sum  go_deps.bzl
go/pkg/balancer/: BUILD.bazel
go/pkg/balancer/proto/: BUILD.bazel
go/pkg/client/: BUILD.bazel
go/pkg/fakes/: BUILD.bazel
go/pkg/flags/: BUILD.bazel
