## MODULE.bazel
module(
    name = "com_github_bazelbuild_remote_apis_sdks",
    repo_name = "com_github_bazelbuild_remote_apis_sdks",
)

## Bazel rule libraries
bazel_dep(name = "rules_proto", version = "6.0.0")
bazel_dep(
    name = "protobuf",
    version = "26.0.bcr.1",  # Same version as used in goma patch
    repo_name = "com_google_protobuf",
)
bazel_dep(name = "rules_go", version = "0.48.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "bazel_skylib", version = "1.7.0")
bazel_dep(name = "platforms", version = "0.0.10")

## Go Dependencies
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk.download(
    name = "go_sdk",
    version = "1.20.7",
)
use_repo(go_sdk, "go_sdk")
#go_sdk.nogo(nogo = "//:nogo")

bazel_dep(name = "gazelle", version = "0.37.0", dev_dependency = True)
git_override(
    module_name = "gazelle",
    commit = "7d10bf7befce477f518056cfc502939000bea3fa",
    patch_strip = 1,
    patches = ["//third_party/patches/gazelle:googleapis.patch"],
    remote = "https://github.com/bazelbuild/bazel-gazelle.git",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps", dev_dependency = True)
go_deps.from_file(go_mod = "//:go.mod")

### Googleapis pinned version
go_deps.archive_override(
    path = "github.com/googleapis/googleapis",
    sha256 = "7b6ea252f0b8fb5cd722f45feb83e115b689909bbb6a393a873b6cbad4ceae1d",
    strip_prefix = "googleapis-143084a2624b6591ee1f9d23e7f5241856642f4d",
    urls = ["https://github.com/googleapis/googleapis/archive/143084a2624b6591ee1f9d23e7f5241856642f4d.zip"],
)

googleapis_resolve = [
    "gazelle:resolve proto proto google/rpc/status.proto @com_github_googleapis_googleapis//google/rpc:status_proto",
    "gazelle:resolve proto go google/rpc/status.proto @org_golang_google_genproto_googleapis_rpc//status",
    "gazelle:resolve proto proto google/longrunning/operations.proto @com_github_googleapis_googleapis//google/longrunning:operations_proto",
    "gazelle:resolve proto go google/longrunning/operations.proto @org_golang_google_genproto//googleapis/longrunning",
    "gazelle:resolve proto proto google/api/annotations.proto @com_github_googleapis_googleapis//google/api:annotations_proto",
    "gazelle:resolve proto go google/api/annotations.proto @org_golang_google_genproto_googleapis_api//annotations",
]

go_deps.gazelle_override(
    build_file_generation = "clean",
    directives = googleapis_resolve,
    path = "github.com/bazelbuild/remote-apis",
)
go_deps.gazelle_override(
    build_file_generation = "clean",
    directives = [
        "gazelle:proto file",
    ],
    path = "github.com/googleapis/googleapis",
)
use_repo(
    go_deps,
    "com_github_bazelbuild_remote_apis",
    "com_github_golang_glog",
    "com_github_google_go_cmp",
    "com_github_google_uuid",
    "com_github_hectane_go_acl",
    "com_github_klauspost_compress",
    "com_github_pkg_xattr",
    "org_golang_google_api",
    "org_golang_google_genproto",
    "org_golang_google_genproto_googleapis_bytestream",
    "org_golang_google_genproto_googleapis_rpc",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_oauth2",
    "org_golang_x_sync",
)
